pathfinder/tests/BugsViaSourceforge/Tests/ID.1267018.swallowed_error_messages-2.stable.out.Algebra
stdout of test 'ID.1267018.swallowed_error_messages-2` in directory 'tests/BugsViaSourceforge` itself:


# 19:03:55 >  
# 19:03:55 >  Mtimeout -timeout 60 Mserver "--config=/net/corona.ins.cwi.nl/export/scratch0/manegold/Monet/Testing/Current/.GNU.64.64.d.--enable-debug.PREFIX./etc/MonetDB.conf" --debug=10 --set "monet_mod_path=/net/corona.ins.cwi.nl/export/scratch0/manegold/Monet/Testing/Current/.GNU.64.64.d.--enable-debug.PREFIX./lib/MonetDB:/net/corona.ins.cwi.nl/export/scratch0/manegold/Monet/Testing/Current/.GNU.64.64.d.--enable-debug.PREFIX./lib/bin" --set "gdk_dbfarm=/net/corona.ins.cwi.nl/export/scratch0/manegold/Monet/Testing/Current/.GNU.64.64.d.--enable-debug.PREFIX./var/MonetDB/dbfarm" --set "sql_logdir=/net/corona.ins.cwi.nl/export/scratch0/manegold/Monet/Testing/Current/.GNU.64.64.d.--enable-debug.PREFIX./var/MonetDB/log" --set mapi_port=34393 --set sql_port=42119 --set xquery_port=55495 --set monet_prompt= --trace --dbname=mTests_tests_BugsViaSourceforge  < ID.1267018.swallowed_error_messages-2.milS
# 19:03:55 >  

# Monet Database Server V4.9.3
# Copyright (c) 1993-2005, CWI. All rights reserved.
# Compiled for x86_64-redhat-linux-gnu/64bit with 64bit OIDs; dynamically linked.
# Visit http://monetdb.cwi.nl/ for further information.
module(pathfinder);

xquery("xml","doc(\"abcde.xml\")").printf();
!ERROR: err:FODC0002, Error retrieving resource (no such document "abcde.xml").
!ERROR: interpret: no matching MIL operator to 'printf(void)'.
!MAYBE YOU MEAN:
!	printf(str, ..any..) : void

quit();

# 19:03:55 >  
# 19:03:55 >  Done.
# 19:03:55 >  

